Static Grid almost ready - More Sass Functions

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ coverage
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+gumby-v2.6.3_custom
