--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "font4" : "@import url(http://fonts.googleapis.com/css?family=Vollkorn:400,700)",
     "font5" : "@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900)",
     "font6" : "@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,300,900)",
-    "font7" : "@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700)"
+    "font7" : "@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700)",
+    "font7" : "@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700)"
   }
 }
