--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ coverage
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 gumby-v2.6.3_custom
+
+css3-patterned-buttons/
